<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textbox_hint"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spnUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/currency_units" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/usd"
                    android:contentDescription="@string/usd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/eur"
                    android:contentDescription="@string/eur_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblEur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/gbp"
                    android:contentDescription="@string/gbp_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gbp_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblGbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/inr"
                    android:contentDescription="@string/inr_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inr_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblInr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/aud"
                    android:contentDescription="@string/aud_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aud_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblAud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/cad"
                    android:contentDescription="@string/cad_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/zar"
                    android:contentDescription="@string/zar_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zar_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblZar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/nzd"
                    android:contentDescription="@string/nzd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nzd_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblNzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/jpy"
                    android:contentDescription="@string/jpy_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpy_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblJpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/vnd"
                    android:contentDescription="@string/vnd_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vnd_unit"
                    android:paddingLeft="10dp"/>
                <TextView
                    android:id="@+id/lblVnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"/>
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>